--- a/_posts/ru/2020-01-10-test-post-1.md
+++ b/_posts/ru/2020-01-10-test-post-1.md
@@ -4,7 +4,7 @@ title: Test Post 1
 author: SDG Team
 excerpt: "Excerpt translation needed"
 language: es
-permalink: /es/test-post-1/
+permalink: /ru/test-post-1/
 categories:
   - International
 ---
